--- a/index.html
+++ b/index.html
@@ -930,12 +930,24 @@
 			<div class="col-xs-6">
 				<div id="equippedHeirlooms">
 					<div class="row">
+						<!--MOD:lunatic-->
+						<div class="col-xs-6">
+							Equipped Dagger<br/>
+							<div id="DaggerEquipped"></div><br/>
+							<span id="DaggerEquippedName"></span>
+						</div>
+						<!--MOD:lunatic-->
+						<div class="col-xs-6">
+							Equipped Juwel<br/>
+							<div id="JuwelEquipped"></div><br/>
+							<span id="JuwelEquippedName"></span>
+						</div>
 						<div class="col-xs-6">
 							Equipped Shield<br/>
 							<div id="ShieldEquipped"></div><br/>
 							<span id="ShieldEquippedName"></span>
 						</div>
-						<div class="col-xs-6">
+							<div class="col-xs-6">
 							Equipped Staff<br/>
 							<div id="StaffEquipped"></div><br/>
 							<span id="StaffEquippedName"></span>
